run/k8s/backend-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-example: backend-api
  template:
    metadata:
      labels:
        k8s-example: backend-api
    spec:
      containers:
        - image: reg.whoisnian.com/k8s-example/backend-api:v0.0.3
          name: backend-api
          ports:
            - containerPort: 8080
      restartPolicy: Always
