run/k8s/backend-file-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-file
spec:
  replicas: 4
  selector:
    matchLabels:
      k8s-example: backend-file
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-example: backend-file
    spec:
      containers:
        - image: ghcr.io/whoisnian/k8s-example-backend-file:v0.0.5
          name: backend-file
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /app/uploads
              name: uploads
      restartPolicy: Always
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
