run/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-example: frontend
  template:
    metadata:
      labels:
        k8s-example: frontend
    spec:
      containers:
        - image: ghcr.io/whoisnian/k8s-example-frontend-nginx:v1.0.3
          name: frontend
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: config
              mountPath: /app/html/config
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: version-config
            items:
              - key: VERSION_JSON
                path: version.json
