run/k8s/backend-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-example: backend-api
  name: backend-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    k8s-example: backend-api
