run/k8s/backend-file-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-file
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    k8s-example: backend-file
