run/k8s/external-database.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-database
subsets:
  - addresses:
      - ip: 192.168.49.1
    ports:
      - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: external-database
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
