run/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    k8s-example: frontend
