run/k8s/ingress-k8s-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-k8s-example
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8082
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-api
                port:
                  number: 8080
          - path: /file/
            pathType: Prefix
            backend:
              service:
                name: backend-file
                port:
                  number: 8081
